<resources>
    <string name="app_name">Clima</string>
    <string name="ciudad">Pasto</string>
    <string name="temp">Temperatura</string>
    <string name="empty">00</string>
    <string name="hum">Humedad</string>
    <string name="pre">Presion</string>
    <string name="loading">Cargando...</string>

    <string name="url">https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20in%20(select%20woeid%20from%20geo.places(1)%20where%20text%3D%22pasto%2C%20co%22)&amp;format=json&amp;env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys</string>
    <string name="reload">Recargar</string>
</resources>
