<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.estacionvl_tc_014.clima.MainActivity">


    <TextView
        style="@style/Base.TextAppearance.AppCompat.Display4"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:id="@+id/descripcion"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="@dimen/medium"
        />

    <TableRow>
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small"
            android:text="@string/temp"
            />
        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            />
    </TableRow>

    <TableRow>
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small"
            android:text="@string/hum"
            />
        <TextView
            android:id="@+id/hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            />
    </TableRow>
    <TableRow>
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small"
            android:text="@string/pre"
            />
        <TextView
            android:id="@+id/pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            />
    </TableRow>
</TableLayout>
